@@ -313,6 +313,7 @@ add additional safty for delete files on Kodi events
 fix remove library on Emby server
 fix remove item issue
 fix audioplayer focus
+fix trakt issue/progress updates
 
 
 6.0.13 (beta)
